[gd_scene load_steps=6 format=3 uid="uid://dlimqo8igshs3"]

[ext_resource type="Script" uid="uid://cswvuev776lqf" path="res://singleton/sound-effect/SoundEffect.gd" id="1_12ptu"]
[ext_resource type="AudioStream" uid="uid://bykr1yaisabfe" path="res://singleton/sound-effect/resource/tick-.wav" id="2_bltju"]
[ext_resource type="AudioStream" uid="uid://4t58xs4qdlkr" path="res://singleton/sound-effect/resource/tick+.wav" id="3_d51pi"]
[ext_resource type="AudioStream" uid="uid://dlbathqk2uyqy" path="res://singleton/sound-effect/resource/press-.wav" id="3_g7kf6"]
[ext_resource type="AudioStream" uid="uid://c0gbantbfid7s" path="res://singleton/sound-effect/resource/press+.wav" id="4_wlvim"]

[node name="SoundEffect" type="Node" node_paths=PackedStringArray("tick0", "tick1", "press0", "press1", "voice")]
script = ExtResource("1_12ptu")
tick0 = NodePath("tick0")
tick1 = NodePath("tick1")
press0 = NodePath("press0")
press1 = NodePath("press1")
voice = NodePath("VoicePlayback")

[node name="tick0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bltju")

[node name="tick1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d51pi")

[node name="press0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g7kf6")
bus = &"SFX"

[node name="press1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wlvim")
bus = &"SFX"

[node name="VoicePlayback" type="AudioStreamPlayer" parent="."]
bus = &"Voice"
